# SoftionicsHub

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  add_com_ports.diff  build.bat  fix_serial_arduino_sync.diff  fix_serial_plot.diff  package_windows.bat  patch_fixed.diff
.github/workflows/: build.yml
apps/cli/: main.cpp
apps/gui/: BF16Window.cpp  BF16Window.h  BleWorker.cpp  BleWorker.h  FormatDoubleSpinBox.h  MainWindow.cpp  MainWindow.h  PositionTrackingEngine.cpp  PositionTrackingEngine.h  PositionTrackingWindow.cpp  PositionTrackingWindow.h  main.cpp
core/include/hub/: Frame.h  Framer.h  Parser.h  Pipeline.h
core/include/hub/filters/: Bias.h  EMA.h  MA.h  Notch60.h
core/include/hub/model/: BF16.h  BruteForce_16x2.h  Derivative2_16x5.h  Derivative_16x5.h  ExampleAlgo_16x1.h  Linear.h  PositionTrackingRegistry.h
core/src/: Framer.cpp  Parser.cpp  Pipeline.cpp
core/src/filters/: Bias.cpp  EMA.cpp  MA.cpp  Notch60.cpp
core/src/model/: BF16.cpp  BruteForce_16x2.cpp  Derivative2_16x5.cpp  Derivative_16x5.cpp  ExampleAlgo_16x1.cpp  Linear.cpp  PositionTrackingRegistry.cpp
